# paperlaiss

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  classify-config.json  classify.py  pyproject.toml
.githooks/: pre-push
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
backlog/: ADR-1-grounding-statt-freier-generierung.md  ADR-2-eigener-klassifizierer.md  M-1-produktionsreif.md  README-KONVENTION.md  README.md
deploy/: .env.example  docker-compose.example.yml
i18n/: CODE_OF_CONDUCT.de.md  CONTRIBUTING.de.md  README.de.md  SECURITY.de.md
panel/: Dockerfile  app.py  requirements.txt
scripts/: _backlog.py  _residue_check.sh  check.sh
tests/: run_all.py  test_classify.py  test_repo.py
tests/_kit/: MANIFEST.sha256  backlog.py  headers.py  hygiene.py  hygiene_policy.json  report.py
